cabal-version:       >=1.10
name:                doggerel
version:             0.1.0.0
synopsis:            Programming environment with built-in dimensional analysis
license:             Apache-2.0
license-file:        LICENSE
author:              Wyatt Allen
maintainer:          wyatt.allen0@gmail.com
build-type:          Simple
extra-source-files:  README.md

executable main
  main-is:             Doggerel/Main.hs
  other-modules:
    Doggerel.DegreeMap
    Doggerel.Core
    Doggerel.Conversion
    Doggerel.Ast
    Doggerel.Eval
    Doggerel.Exec
    Doggerel.Parser
    Doggerel.ParserUtils
    Doggerel.Scope
    Doggerel.Output
  build-depends:
      base
    , containers
    , mtl
    , parsec
  hs-source-dirs:      src
  default-language:    Haskell2010

Test-Suite DegreeMapTests
  type:       exitcode-stdio-1.0
  main-is:    Doggerel/DegreeMapTests.hs
  other-modules:
    Doggerel.DegreeMap
  hs-source-dirs:
      src
    , tests
  build-depends:
    base >= 4 && < 5
    , containers
    , mtl
    , HUnit

Test-Suite ConversionTests
  type:       exitcode-stdio-1.0
  main-is:    Doggerel/ConversionTests.hs
  other-modules:
    Doggerel.DegreeMap
    Doggerel.Core
    Doggerel.Conversion
  hs-source-dirs:
      src
    , tests
  build-depends:
    base >= 4 && < 5
    , containers
    , mtl
    , HUnit

Test-Suite EvalTests
  type:       exitcode-stdio-1.0
  main-is:    Doggerel/EvalTests.hs
  other-modules:
    Doggerel.Ast
    Doggerel.Core
    Doggerel.Conversion
    Doggerel.DegreeMap
    Doggerel.Eval
    Doggerel.Scope
  hs-source-dirs:
      src
    , tests
  build-depends:
    base >= 4 && < 5
    , containers
    , mtl
    , HUnit

Test-Suite ExecTests
  type:       exitcode-stdio-1.0
  main-is:    Doggerel/ExecTests.hs
  other-modules:
    Doggerel.Ast
    Doggerel.Core
    Doggerel.Conversion
    Doggerel.DegreeMap
    Doggerel.Eval
    Doggerel.Exec
    Doggerel.Output
    Doggerel.Scope
  hs-source-dirs:
      src
    , tests
  build-depends:
    base >= 4 && < 5
    , containers
    , mtl
    , HUnit

Test-Suite OutputTests
  type:       exitcode-stdio-1.0
  main-is:    Doggerel/OutputTests.hs
  other-modules:
    Doggerel.Ast
    Doggerel.Core
    Doggerel.Conversion
    Doggerel.DegreeMap
    Doggerel.Output
  hs-source-dirs:
      src
    , tests
  build-depends:
    base >= 4 && < 5
    , containers
    , mtl
    , HUnit

Test-Suite ParserUtilsTests
  type:       exitcode-stdio-1.0
  main-is:    Doggerel/ParserUtilsTests.hs
  other-modules:
    Doggerel.Ast
    Doggerel.Core
    Doggerel.Conversion
    Doggerel.DegreeMap
    Doggerel.Output
    Doggerel.ParserUtils
  hs-source-dirs:
      src
    , tests
  build-depends:
    base >= 4 && < 5
    , containers
    , mtl
    , HUnit
    , parsec
