cabal-version:       >=1.10
name:                doggerel
version:             0.1.0.0
synopsis:            Programming environment with built-in dimensional analysis
license:             Apache-2.0
license-file:        LICENSE
author:              Wyatt Allen
maintainer:          wyatt.allen0@gmail.com
build-type:          Simple
extra-source-files:  README.md

executable main
  main-is:             Doggerel/Main.hs
  other-modules:
    Doggerel.DegreeMap
    Doggerel.Charset
    Doggerel.Core
    Doggerel.Conversion
    Doggerel.Ast
    Doggerel.Eval
    Doggerel.Exec
    Doggerel.IO
    Doggerel.Parser
    Doggerel.ParserUtils
    Doggerel.Repl
    Doggerel.Run
    Doggerel.Scope
    Doggerel.Statement.Common
    Doggerel.Statement.Dim
    Doggerel.Statement.Unit
    Doggerel.Output
    Doggerel.Relation
    Doggerel.Validation
  build-depends:
      base
    , containers
    , extra
    , mtl
    , parsec
  hs-source-dirs:      src
  default-language:    Haskell2010

Test-Suite DegreeMapTests
  type:       exitcode-stdio-1.0
  main-is:    Doggerel/DegreeMapTests.hs
  other-modules:
    Doggerel.Charset
    Doggerel.DegreeMap
  hs-source-dirs:
      src
    , tests
  build-depends:
      base >= 4 && < 5
    , containers
    , mtl
    , HUnit
    , parsec

Test-Suite ConversionTests
  type:       exitcode-stdio-1.0
  main-is:    Doggerel/ConversionTests.hs
  other-modules:
    Doggerel.Charset
    Doggerel.Core
    Doggerel.Conversion
    Doggerel.DegreeMap
    Doggerel.IO
    Doggerel.Statement.Common
    Doggerel.Statement.Dim
    Doggerel.Statement.Unit
  hs-source-dirs:
      src
    , tests
  build-depends:
      base >= 4 && < 5
    , containers
    , mtl
    , HUnit
    , parsec

Test-Suite EvalTests
  type:       exitcode-stdio-1.0
  main-is:    Doggerel/EvalTests.hs
  other-modules:
    Doggerel.Ast
    Doggerel.Charset
    Doggerel.Core
    Doggerel.Conversion
    Doggerel.DegreeMap
    Doggerel.Eval
    Doggerel.Scope
  hs-source-dirs:
      src
    , tests
  build-depends:
      base >= 4 && < 5
    , containers
    , extra
    , mtl
    , HUnit
    , parsec

Test-Suite ExecTests
  type:       exitcode-stdio-1.0
  main-is:    Doggerel/ExecTests.hs
  other-modules:
    Doggerel.Ast
    Doggerel.Charset
    Doggerel.Core
    Doggerel.Conversion
    Doggerel.DegreeMap
    Doggerel.Eval
    Doggerel.Exec
    Doggerel.IO
    Doggerel.Output
    Doggerel.ParserUtils
    Doggerel.Relation
    Doggerel.Scope
    Doggerel.Statement.Common
    Doggerel.Statement.Dim
    Doggerel.Statement.Unit
    Doggerel.Validation
  hs-source-dirs:
      src
    , tests
  build-depends:
      base >= 4 && < 5
    , containers
    , extra
    , mtl
    , HUnit
    , parsec

Test-Suite OutputTests
  type:       exitcode-stdio-1.0
  main-is:    Doggerel/OutputTests.hs
  other-modules:
    Doggerel.Ast
    Doggerel.Charset
    Doggerel.Core
    Doggerel.Conversion
    Doggerel.DegreeMap
    Doggerel.Eval
    Doggerel.IO
    Doggerel.Output
    Doggerel.Scope
    Doggerel.Statement.Common
    Doggerel.Statement.Dim
    Doggerel.Statement.Unit
    Doggerel.Validation
  hs-source-dirs:
      src
    , tests
  build-depends:
    base >= 4 && < 5
    , containers
    , mtl
    , HUnit
    , parsec

Test-Suite ParserTests
  type:       exitcode-stdio-1.0
  main-is:    Doggerel/ParserTests.hs
  other-modules:
    Doggerel.Ast
    Doggerel.Charset
    Doggerel.Core
    Doggerel.Conversion
    Doggerel.DegreeMap
    Doggerel.Eval
    Doggerel.IO
    Doggerel.Output
    Doggerel.Parser
    Doggerel.ParserUtils
    Doggerel.Scope
    Doggerel.Statement.Common
    Doggerel.Statement.Dim
    Doggerel.Statement.Unit
    Doggerel.Validation
  hs-source-dirs:
      src
    , tests
  build-depends:
      base >= 4 && < 5
    , containers
    , mtl
    , HUnit
    , parsec

Test-Suite ParserUtilsTests
  type:       exitcode-stdio-1.0
  main-is:    Doggerel/ParserUtilsTests.hs
  other-modules:
    Doggerel.Ast
    Doggerel.Charset
    Doggerel.Core
    Doggerel.Conversion
    Doggerel.DegreeMap
    Doggerel.Eval
    Doggerel.IO
    Doggerel.Output
    Doggerel.ParserUtils
    Doggerel.Scope
    Doggerel.Statement.Common
    Doggerel.Statement.Dim
    Doggerel.Statement.Unit
    Doggerel.Validation
  hs-source-dirs:
      src
    , tests
  build-depends:
      base >= 4 && < 5
    , containers
    , mtl
    , HUnit
    , parsec

Test-Suite RelationTests
  type:       exitcode-stdio-1.0
  main-is:    Doggerel/RelationTests.hs
  other-modules:
    Doggerel.Ast
    Doggerel.Charset
    Doggerel.Conversion
    Doggerel.Core
    Doggerel.DegreeMap
    Doggerel.Eval
    Doggerel.Scope
    Doggerel.Relation
    Doggerel.Validation
  hs-source-dirs:
      src
    , tests
  build-depends:
      base >= 4 && < 5
    , containers
    , extra
    , mtl
    , HUnit
    , parsec

Test-Suite RunTests
  type:       exitcode-stdio-1.0
  main-is:    Doggerel/RunTests.hs
  other-modules:
    Doggerel.Ast
    Doggerel.Charset
    Doggerel.Conversion
    Doggerel.Core
    Doggerel.DegreeMap
    Doggerel.Eval
    Doggerel.Exec
    Doggerel.IO
    Doggerel.Output
    Doggerel.Parser
    Doggerel.ParserUtils
    Doggerel.Run
    Doggerel.Scope
    Doggerel.Statement.Common
    Doggerel.Statement.Dim
    Doggerel.Statement.Unit
    Doggerel.Relation
    Doggerel.Validation
  hs-source-dirs:
      src
    , tests
  build-depends:
      base >= 4 && < 5
    , containers
    , extra
    , mtl
    , HUnit
    , parsec

Test-Suite ScopeTests
  type:       exitcode-stdio-1.0
  main-is:    Doggerel/ScopeTests.hs
  other-modules:
    Doggerel.Ast
    Doggerel.Charset
    Doggerel.Conversion
    Doggerel.Core
    Doggerel.DegreeMap
    Doggerel.Scope
  hs-source-dirs:
      src
    , tests
  build-depends:
      base >= 4 && < 5
    , containers
    , extra
    , mtl
    , HUnit

Test-Suite ValidationTests
  type:       exitcode-stdio-1.0
  main-is:    Doggerel/ValidationTests.hs
  other-modules:
    Doggerel.Ast
    Doggerel.Charset
    Doggerel.Conversion
    Doggerel.Core
    Doggerel.DegreeMap
    Doggerel.Eval
    Doggerel.Scope
    Doggerel.Validation
  hs-source-dirs:
      src
    , tests
  build-depends:
    base >= 4 && < 5
    , containers
    , extra
    , mtl
    , HUnit
